--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+-webkit-scrollbar {
+  width: 6px;
+  opacity: 0.2;
+  background-color: #111111;
+  height: 0px;
+  border-radius: 6px;
+}
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+@font-face {
+  font-family: RobotoBold;
+  src: url("assets/fonts/Roboto-Bold.ttf");
+  /* font-weight: 900; */
+}
+
+@font-face {
+  font-family: RobotoRegular;
+  src: url("assets/fonts/Roboto-Regular.ttf");
+  /* font-weight: 900; */
+}
+
+@font-face {
+  font-family: RobotoMedium;
+  src: url("assets/fonts/Roboto-Medium.ttf");
+  /* font-weight: 900; */
+}
+
+@font-face {
+  font-family: RobotoBold;
+  src: url("assets/fonts/Roboto-Bold.ttf");
+  /* font-weight: 900; */
 }
